gtk4: Fix toolbar item spacing
Use 1px horizontal spacing between toolbar items, as with GTK 3.

--- a/common/gtk-4.0/sass/_common.scss
+++ b/common/gtk-4.0/sass/_common.scss
@@ -923,7 +923,7 @@ modelbutton.flat arrow {
 .toolbar :not(.linked) > fontbutton > button,
 .toolbar :not(.linked) > appchooserbutton > button,
 .toolbar :not(.linked) > combobox > box > button {
-  margin: 1px;
+  margin: 1px 0;
   @extend %button_basic_flat;
 }
 
@@ -1176,7 +1176,7 @@ combobox {
  ************/
 %toolbar {
   padding: 4px;
-  border-spacing: 4px;
+  border-spacing: 1px;
   background-color: $bg_color;
 }
 
